--- a/src/app.scss
+++ b/src/app.scss
@@ -1,5 +1,7 @@
+@import "./components/_variables";
 @import "./components/_App";
 @import "./components/_LeaderTable";
+@import "./components/_CamperList";
 
 body {
   background-color: lightyellow;
