--- a/src/components/_LeaderTable.scss
+++ b/src/components/_LeaderTable.scss
@@ -1,21 +1,26 @@
-$odd-color: #fff;
-$even-color: #eee;
-$table-background-color: lightgrey;
-$table-border: 1px solid darkgrey;
-
-table {
+.style-table {
     border-collapse: collapse;
+    border: $border;
+    width: 80%;
+    margin: 20px auto 0px;
+    font-size: 20px;
 		th {
 			background-color: $table-background-color;
 			text-align: center;
 		}
 		td, th {
-	    border: $table-border;
-	  }
+	    border: $border;
+    }
 		tr:nth-child(even) {
 	    background-color: $even-color;
 	  }
 	  tr:nth-child(odd) {
 	    background-color: $odd-color;
 	  }
+    .style-left {
+      text-align: left;
+    }
+    .current-column {
+      color: $current-column-color;
+    }
 }
